--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,18 @@
         android:text="@string/map_demo"
         />
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/ivData"
+        android:contentDescription="Image place" />
+
+    <TextView
+        android:text="+36203385608"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="web|phone"
+        />
 
 
 </LinearLayout>
